# 61120-fa23

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh
gc/: gc.h  main.cpp  object.h  timerclass.h
interpreter/: .gitignore  AST.h  CMakeLists.txt  Makefile  PrettyPrinter.h  Visitor.h  interpreter.cpp  parse-tree.cpp  parser-unique-ptr.cpp  parser.cpp
test/: CMakeLists.txt
test/interpreter/: CMakeLists.txt  example-test.cpp
test/vm/: CMakeLists.txt  example-interpreter-test.cpp  example-test.cpp
tests/a1/: run-tests.sh
tests/a2/: run-tests.sh
tests/a3/: run-tests.sh
tests/a3/a1-mitbc/: good1.mitbc  good2.mitbc  good4.mitbc  good5.mitbc  good7.mitbc
tests/a3/a2-mitbc/: good02.mitbc  good03.mitbc  good04.mitbc  good05.mitbc  good06.mitbc  good07.mitbc  good08.mitbc  good09.mitbc  good10.mitbc  good11.mitbc  good12.mitbc  good13.mitbc  good14.mitbc  good15.mitbc  good16.mitbc  good17.mitbc
tests/a4/: cpptest.sh  objects.h  run-tests.sh
tests/a5/: run-tests.sh
tests/a5/private/: Readme
tests/derby/public/: textproc.tex  treeproc.data
vm/: CMakeLists.txt  Makefile
vm/bc-parser/: CMakeLists.txt  bc-lexer.lex  bc-parser-driver.cpp  bc-parser.yy  prettyprinter.h  utils.cpp
vm/src/bytecode/: instructions.h  types.h
